Try to fix scrolling on mobile

--- a/src/components/main/App.css
+++ b/src/components/main/App.css
@@ -33,7 +33,7 @@
 }
 .App-screen {
   position:absolute;
-  height: 100vh; width: 100vw; 
+  height: 100%; width: 100vw; 
 }
 .App-screen::before {
   background-image: url("../../assets/images/dark_background.jpg");
